workloads/weave-system/weave-scope-agent.ds.yaml
---

apiVersion: extensions/v1beta1
kind: DaemonSet

metadata:
  name: weave-scope-agent
  namespace: weave-system
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.scope-agent: semver:~1
  labels:
    app.kubernetes.io/name: weave-scope
    weave-cloud-component: scope
    weave-scope-component: agent

spec:
  minReadySeconds: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: weave-scope
      weave-cloud-component: scope
      weave-scope-component: agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weave-scope
        weave-cloud-component: scope
        weave-scope-component: agent
    spec:
      containers:
        - name: scope-agent
          image: weaveworks/scope:1.10.2
          imagePullPolicy: IfNotPresent
          command: ["/home/weave/scope"]
          args:
            - --mode=probe
            - --probe-only
            - --probe.kubernetes.role=host
            - --probe.docker.bridge=docker0
            - --probe.docker=true
            - --probe.no-controls=true
            - --weave=false
            - weave-scope-app:80
          volumeMounts:
            - name: scope-plugins
              mountPath: /var/run/scope/plugins
            - name: sys-kernel-debug
              mountPath: /sys/kernel/debug
            - name: docker-socket
              mountPath: /var/run/docker.sock
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 115m
              memory: 125Mi
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      hostPID: true
      tolerations:
        - effect: NoSchedule
          operator: Exists
      volumes:
        - name: scope-plugins
          hostPath:
            path: /var/run/scope/plugins
        - name: sys-kernel-debug
          hostPath:
            path: /sys/kernel/debug
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
  updateStrategy:
    type: RollingUpdate
